--- a/2024.3.13/2024.3.13/2024.3.13.vcxproj.filters
+++ b/2024.3.13/2024.3.13/2024.3.13.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
